			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2739 2005/03/29 15:50:44 jinmei Exp $

<200503>
2005-03-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/addrconf.c (update_address): make sure that
	the lifetimes of addresses are updated when the client receives a
	Reply in response to Renew or Rebind.

2005-03-23  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/net/if_ist.c: added a sanity check for the IPv4 address 
	  embedded in the configured IPv6 address

2005-03-18  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/in6.c, in6_var.h, in6_proto.c, ip6_input.c,
	  ip6_mroute.c: added a knob to enable path MTU discovery for 
	  multicast packets. (by default, it is disabled)

2005-03-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ip6_output.c: fixed a kernel crash due to a LOR
	by a multicast-group join without specifying any receiving interface.

2005-03-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/in6.c, in6_var.h, nd6.c: introduced an ioctl option
	 to configure IPv6 host variables from userland.   (intented for a use 
	 on router to reflect RA parameter to kernel)
	* kame/kame/ndp/ndp.c: added a knob to kick this ioctl.
	
2005-03-08  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/kern/uipc_socket.c, freebsd5/sys/kern/uipc_syscalls.c,
	  freebsd5/kern/socket.h
	  makes SCTP compilable on FreeBSD5

Tue Mar  8 05:31:52 JST 2005
	* kame/kame/racoon/isakmp.c:
	one of buffer overrun problem was fixed.  from ipsec-tools team.

Mon Mar  6 2005  itojun@iijlab.net
	* kame/sys/netinet{,6}/sctp*: new patch from randall

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/dhcp6/dhcp6.c: fixed a DHCPv6-client 
	  initialization failure when a node has no IPv6 global address.

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/dhcp6/dhcp6relay.[c8]: supports multiple client-side 
	  interfaces

2005-03-02  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ip6_output.c: fixed a freebsd5 kernel crash when