@@ -1,4 +1,4 @@
-/*	$KAME: config.c,v 1.90 2004/10/12 05:38:57 suz Exp $	*/
+/*	$KAME: config.c,v 1.91 2005/04/01 06:04:36 suz Exp $	*/
 
 /*
  * Copyright (C) 1998 WIDE Project.
@@ -47,6 +47,7 @@
 #include <netinet/ip6.h>
 #include <netinet6/ip6_var.h>
 #include <netinet/icmp6.h>
+#include <netinet6/nd6.h>
 
 #include <arpa/inet.h>
 
@@ -506,6 +507,40 @@ getconfig(intface)
 		       IPV6_MMTU, tmp->phymtu);
 		exit(1);
 	}
+
+#ifdef SIOCSIFINFO_IN6
+	{
+		struct in6_ndireq ndi;
+		int s;
+
+		if ((s = socket(AF_INET6, SOCK_DGRAM, 0)) < 0) {
+			syslog(LOG_ERR, "<%s> socket: %s", __func__,
+			       strerror(errno));
+			exit(1);
+		}
+		memset(&ndi, 0, sizeof(ndi));
+		strncpy(ndi.ifname, intface, IFNAMSIZ);
+		if (ioctl(s, SIOCGIFINFO_IN6, (caddr_t)&ndi) < 0) {
+			syslog(LOG_INFO, "<%s> ioctl:SIOCGIFINFO_IN6 at %s: %s",
+			     __func__, intface, strerror(errno));
+		}
+
+		/* to recover the value when rtadvd dies */
+		tmp->orig_chlim = ndi.ndi.chlim;
+		tmp->orig_retrans = ndi.ndi.retrans;
+		tmp->orig_basereachable = ndi.ndi.basereachable;
+
+		/* reflect the RA info to the host variables in kernel */
+		ndi.ndi.chlim = tmp->hoplimit;
+		ndi.ndi.retrans = tmp->retranstimer;
+		ndi.ndi.basereachable = tmp->reachabletime;
+		if (ioctl(s, SIOCSIFINFO_IN6, (caddr_t)&ndi) < 0) {
+			syslog(LOG_INFO, "<%s> ioctl:SIOCSIFINFO_IN6 at %s: %s",
+			     __func__, intface, strerror(errno));
+		}
+		close(s);
+	}
+#endif
 
 	/* route information */
 #ifdef ROUTEINFO
